--- a/Templates/base.html
+++ b/Templates/base.html
@@ -15,6 +15,9 @@
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+    <div style="display: none;">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+    </div>
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
