text changes. make sure there is uniformity in the website

--- a/Templates/dsw/dashboard.html
+++ b/Templates/dsw/dashboard.html
@@ -6,7 +6,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">DSW Administration Dashboard</h2>
-        <p class="lead">Monitor and manage campus club activities and events.</p>
+        <p class="lead">Monitor and manage Clubs and Chapter activities and events.</p>
     </div>
 </div>
 
