--- a/Templates/dsw/events.html
+++ b/Templates/dsw/events.html
@@ -6,7 +6,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">Events Management</h2>
-        <p class="lead">Monitor all campus events and ensure adherence to guidelines.</p>
+        <p class="lead">Monitor all clubs and chapter events and ensure adherence to guidelines.</p>
     </div>
 </div>
 
