changed 'campus' to 'VIT' in student side

--- a/Templates/student/dashboard.html
+++ b/Templates/student/dashboard.html
@@ -6,7 +6,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">Student Dashboard</h2>
-        <p class="lead">Welcome, {{ current_user.username }}! Discover campus events and join clubs.</p>
+        <p class="lead">Welcome, {{ current_user.username }}! Discover events and join clubs and chapters.</p>
     </div>
 </div>
 
