--- a/Templates/student/clubs.html
+++ b/Templates/student/clubs.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row mb-4">
     <div class="col">
-        <h2 class="mb-4">Campus Clubs</h2>
+        <h2 class="mb-4">VIT Clubs</h2>
         <p class="lead">Explore and join various clubs on campus.</p>
     </div>
 </div>
