--- a/Templates/student/events.html
+++ b/Templates/student/events.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row mb-4">
     <div class="col">
-        <h2 class="mb-4">Campus Events</h2>
+        <h2 class="mb-4">Events</h2>
         <p class="lead">Discover and register for upcoming events.</p>
     </div>
 </div>
